--- a/src/wallet/package.json
+++ b/src/wallet/package.json
@@ -20,7 +20,9 @@
     "@angular/material": "^8.1.3",
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
+    "@angular/pwa": "^0.803.0",
     "@angular/router": "~8.2.3",
+    "@angular/service-worker": "~8.2.3",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
