--- a/src/wallet/package.json
+++ b/src/wallet/package.json
@@ -23,7 +23,7 @@
     "@angular/pwa": "^0.803.0",
     "@angular/router": "~8.2.3",
     "@angular/service-worker": "~8.2.3",
-    "@cityofzion/neon-js": "^4.7.0",
+    "@cityofzion/neon-js": "4.5.2",
     "chat-bubble": "^1.3.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
@@ -49,6 +49,11 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "@types/jest": "^24.0.14",
+    "jest": "24.7.1",
+    "prettier": "^1.18.2",
+    "ts-jest": "^24.0.2",
+    "tslint-config-prettier": "^1.18.0"
   }
 }
