--- a/src/wallet/package.json
+++ b/src/wallet/package.json
@@ -23,6 +23,7 @@
     "@angular/pwa": "^0.803.0",
     "@angular/router": "~8.2.3",
     "@angular/service-worker": "~8.2.3",
+    "@aspnet/signalr": "^1.1.4",
     "@cityofzion/neon-js": "4.5.2",
     "chat-bubble": "^1.3.1",
     "hammerjs": "^2.0.8",
